# nocode

./: .env.example  .gitignore  pyproject.toml
.cursor/rules/: post-edit-diagnostics.mdc  project-constraints.mdc
.cursor/skills/post-edit-diagnostics/: SKILL.md
agent/: tools.py
docs/: claude-tools.md  nocode实现心得.md
src/nocode/: __init__.py  cli.py  clipboard.py  clipboard_image.py  env.py  messages.py  streaming.py  system_prompt.py  tool_loop.py  tui_app.py  welcome.py
src/nocode/config/: __init__.py  env.py  settings.py
src/nocode/core/: __init__.py  agent.py  system_prompt.py
src/nocode/messages/: __init__.py  format.py  image.py  session.py  types.py
src/nocode/providers/: __init__.py  anthropic.py  base.py  moonshot.py
src/nocode/tools/: __init__.py  _helpers.py  loop.py  registry.py  types.py
src/nocode/tools/builtins/: __init__.py  ask_user.py  glob_files.py  list_dir.py  read_file.py  replace_in_file.py  search_text.py  shell.py  todo.py  web_fetch.py  write_file.py
src/nocode/tui/: __init__.py  app.py  welcome.py
tests/: conftest.py  test_cli.py  test_clipboard.py  test_config_env.py  test_config_settings.py  test_core_system_prompt.py  test_messages_format.py  test_messages_image.py  test_messages_session.py  test_messages_types.py  test_providers_init.py  test_tools_helpers.py  test_tools_loop.py  test_tools_registry.py  test_tools_types.py
tests/test_tools_builtins/: __init__.py  conftest.py  test_ask_user.py  test_glob_files.py  test_list_dir.py  test_read_file.py  test_replace_in_file.py  test_search_text.py  test_shell.py  test_todo.py  test_web_fetch.py  test_write_file.py
