[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "nocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.1",
]

[project.scripts]
nocode = "nocode.cli:main"

[tool.uv]
package = true
