[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "nocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "pillow>=10.0.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "requests>=2.33.1",
    "textual>=8.2.1",
]

[project.scripts]
nocode = "nocode.cli:main"

[tool.uv]
package = true
