[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "nocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "python-dotenv>=1.2.2",
    "pillow>=10.0.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "requests>=2.33.1",
    "textual>=8.2.1",
    "openai>=2.31.0",
]

[project.scripts]
nocode = "nocode.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
